2007-08-28  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-13-07
	* *now* the WebGUI should be working properly with xmas ...
	* removed 'addItemRetrieveListener' method.
	* the actionPerformed from xdata::ActionListener (the app
	instantiating the WebGUI) should now recompute all
	necessary parameters upon any 'ItemGroupRetrieveEvent'.
	

2007-08-27  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-13-06
	* fix to WebGUI: monitored parameters were not properly updated
	for xmas

2007-08-22  Emilio Meschi <emilio.meschi@cern.ch>

	* tag V00-13-05
	* added board sense for DAQ GTFE block (fixes crash when running with fake data)

2007-08-21  Emilio Meschi <emilio.meschi@cern.ch>

	* tag V00-13-04
	* added functions to retrieve global event no. from GT blocks
	* modified icon paths in webgui and added appl icon in hyperdaq page
	
2007-07-03  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-13-03
	* adjust WebGUI to instantiate the monitorable infospace of an
	application the xdaq3.9 way.

2007-04-16  Emilio Meschi <emilio.meschi@cern.ch>

	* tag V00-13-00
	* use new plugin manager. Moved module definitions to plugin directory
	NOTA BENE: these changes are incompatible with the 14 series

2007-03-21  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-12-01
	* add i2oEvfMsgs.h which contains the i2o communication structures
	for broker / storage manager communication.

2007-03-08  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-12-00
	* compliant with reorganization of FWCore for 140 series
	* added evf::StateMachine, which implements a uniform asyncronous
	state model to be used for all Filter Unit Applications. It must
	be linked against the xdaq2rc library, which is going to be
	provided with xdaq 3.7.3 within 1 or two days; until then, ask me
	for the hack!

2007-03-07  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-11-11-fix